# color-light-detector

./: CMakeLists.txt  main.c
lib/bh1750/: bh1750.c  bh1750.h
lib/buzzer/: buzzer.c  buzzer.h
lib/gy_33/: gy_33.c  gy_33.h
lib/matriz/: matriz.h
